// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getField for Form 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Float-field-name-"
    style={Object {}}
  >
     
  </label>
  <input
    className="form-control"
    disabled={undefined}
    id="view-type-Form-field_type-Float-field-name-"
    onChange={[Function]}
    step="0.01"
    type="number"
    value={1.23}
  />
</div>
`;

exports[`getField for Form readonly 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Float-field-name-"
    style={Object {}}
  >
    Test
  </label>
  <input
    className="form-control"
    disabled={true}
    id="view-type-Form-field_type-Float-field-name-"
    onChange={[Function]}
    step="0.01"
    type="number"
    value={1.23}
  />
</div>
`;

exports[`getField for Form required 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Float-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <input
    className="form-control"
    disabled={undefined}
    id="view-type-Form-field_type-Float-field-name-"
    onChange={[Function]}
    step="0.01"
    type="number"
    value={1.23}
  />
</div>
`;

exports[`getField for Form required with empty value 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Float-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <input
    className="form-control"
    disabled={undefined}
    id="view-type-Form-field_type-Float-field-name-"
    onChange={[Function]}
    step="0.01"
    type="number"
    value={0}
  />
  <div>
    <span
      style={
        Object {
          "color": "#f44336",
        }
      }
    >
      This field is required
    </span>
  </div>
</div>
`;

exports[`getField for List 1`] = `
<div>
  <span>
    1.23
  </span>
</div>
`;

exports[`getField for Thumbnail 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-Float-field-name-"
  >
     
  </label>
  <div>
    <span>
      1.23
    </span>
  </div>
</div>
`;
